--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.0.4",
+    "styled-components": "^6.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
